--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <h1>Pink Flowers</h1>
+    </div>
     <div class="grid-container">
         <div class="grid-item">Item 1</div>
         <div class="grid-item">Item 2</div>
@@ -15,4 +18,3 @@
     </div>
 </body>
 </html>
-
