--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h1>Pink Flowers</h1>
     </div>
     <div class="grid-container">
-        <div class="grid-item">Item 1</div>
-        <div class="grid-item">Item 2</div>
-        <div class="grid-item">Item 3</div>
-        <div class="grid-item">Item 4</div>
-        <div class="grid-item">Item 5</div>
-        <div class="grid-item">Item 6</div>
+        <div class="grid-item" style="background-image: url('media/portrait.png');">Item 1</div>
+        <div class="grid-item" style="background-image: url('image2.jpg');">Item 2</div>
+        <div class="grid-item" style="background-image: url('image3.jpg');">Item 3</div>
+        <div class="grid-item" style="background-image: url('image4.jpg');">Item 4</div>
+        <div class="grid-item" style="background-image: url('image5.jpg');">Item 5</div>
+        <div class="grid-item" style="background-image: url('image6.jpg');">Item 6</div>
     </div>
 </body>
 </html>
